Stop centering block content on mobile

--- a/src/sass/imports/_sections.scss
+++ b/src/sass/imports/_sections.scss
@@ -81,6 +81,10 @@
   .cell {
     text-align: center;
   }
+
+  ol li {
+    text-align: left;
+  }
 }
 
 @media only screen and (min-width: 801px) {
